Mon Jan 19 10:22:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/make.mpd:
        * bin/MakeProjectCreator/templates/makedll.mpt:

          Added support for VxWorks 5.5 PPC and PENTIUM.

Mon Jan 19 15:59:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Tests.bor:
          Added missing FIFO_Test. Thanks to Peter Bekiesch
          <peter.bekiesch@dtmgmbh.de>for reporting this.

Mon Jan 19 08:07:02 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Fixed a bug where files added to the Template_Files section were
          not removed from the Source_Files section due to differences in
          slashes to backslashes.

Mon Jan 19 07:24:16 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/Misc/test_XtReactor1.cpp:
        * examples/Misc/test_XtReactor2.cpp:

          Removed #define for String (added back in '96).  The workaround is
          apparently no longer needed.  Also fixed some build errors and
          warnings.

Mon Jan 19 10:00:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_auto_compile.pl:
          Fixed typo in file path

Sun Jan 18 15:32:59 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * ACE-INSTALL.html:

          Added patches from Viktor Ransmayr<viktor.ransmayr@t-online.de>
          for a documentation patch, which describes how to build ACE
          using only the MinGW and MSYS package.

Sun Jan 18 10:27:11 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * performance-tests/Server_Concurrency/Leader_Follower/RT_CORBA_Leader_Follower.cpp:

          Used ACE_UINT64_DBLCAST_ADAPTER  instead of direct casting to a
          double to be more portable.

Sun Jan 18 10:13:16 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * Logging/LogManager.h:
        * Logging/Use_Multiple_Sinks.cpp:
        * Logging/Use_Ostream.cpp: